--- a/netflix/styles/common.css
+++ b/netflix/styles/common.css
@@ -1,11 +1,12 @@
 p{
     margin-top: 0;
     margin-bottom: 0;
+    width: 400px;
 
 }
 body{
     font-family: sans-serif;
-    padding: 80px 20px 20px 80px;
+    padding: 5px 10px 5px;
     background-color: black;
     color: white;
-    }
+}
